# git-rewrite

./: .rules  CHANGELOG.md  Cargo.toml  README.md
.config/: committed.toml  release-please-config.json  release-please-manifest.json
.github/workflows/: CD.yml  Lint.yml  Version.yml
crates/git-filter-tree/: CHANGELOG.md  Cargo.toml
crates/git-filter-tree/src/: exe.rs  lib.rs  main.rs
crates/git-rewrite/: CHANGELOG.md  Cargo.toml  README.md
crates/git-rewrite/src/: lib.rs
plumbing/: README.md
plumbing/git-filter-tree/: CHANGELOG.md  Cargo.toml  README.md
plumbing/git-filter-tree/src/: cli.rs  exe.rs  lib.rs  main.rs
porcelain/git-rewrite/: Cargo.toml
src/: cli.rs  exe.rs  lib.rs  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
