[workspace]
resolver = "3"
members = ["plumbing/git-filter-tree"]

[workspace.package]
edition = "2024"
publish = true
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5.60", features = ["derive"] }
git2 = "0.20.4"
globset = "0.4.18"
clap_mangen = "0.2.31"

[package]
name = "git-rewrite"
version = "0.1.0"
description = "Filter and rewrite history, trees, and (eventually) blobs."
repository = "https://github.com/git-ents/git-filter"
documentation = "https://docs.rs/git-rewrite"
edition.workspace = true
publish.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "git-rewrite"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_mangen.workspace = true
git2.workspace = true
globset.workspace = true
git-filter-tree = { version = "0.1.0", path = "plumbing/git-filter-tree" }
