[workspace]
resolver = "3"
members = ["crates/git-rewrite", "crates/git-filter-tree"]

[workspace.package]
edition = "2024"
publish = true
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5.60", features = ["derive"] }
git2 = "0.20.4"
globset = "0.4.18"
clap_mangen = "0.2.31"
