[package]
name = "git-filter-tree"
version = "0.0.2"
description = "Filter Git tree objects by glob patterns"
repository = "https://github.com/git-ents/git-rewrite"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
git2.workspace = true
globset.workspace = true
clap.workspace = true
clap_mangen.workspace = true
