[package]
name = "git-filter-tree"
version = "0.0.5"
description = "Filter and write trees in Git's object database."
repository = "https://github.com/git-ents/git-rewrite"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
git2.workspace = true
globset.workspace = true
clap.workspace = true
clap_mangen.workspace = true
