[package]
name = "git-filter-tree"
version = "0.1.1"
description = "Filter and write trees in Git's object database."
repository = "https://github.com/git-ents/git-filter"
documentation = "https://docs.rs/git-filter-tree"
edition.workspace = true
publish.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
git2.workspace = true
globset.workspace = true
clap.workspace = true
clap_mangen.workspace = true
