[package]
name = "git-rewrite"
version = "0.1.0"
description = "Filter and rewrite history, trees, and (eventually) blobs."
repository = "https://github.com/git-ents/git-filter"
documentation = "https://docs.rs/git-rewrite"
edition.workspace = true
publish.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "git-rewrite"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_mangen.workspace = true
git2.workspace = true
globset.workspace = true
git-filter-tree = { version = "0.1.0", path = "../../plumbing/git-filter-tree" }
